[project]
name = "playlistduration"
version = "0.0.1"
authors = [
  { name="Bibek", email="bibekchand843@gmail.com" },
]
description = "This gives you the total duration of a youtube playlist."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
